--- a/admin/scss/_style.scss
+++ b/admin/scss/_style.scss
@@ -1436,7 +1436,7 @@ body.cms-dialog {
 	.details{
 		.file-url{
 			display:block;
-			width:450px;
+			width:300px;
 			@include hide-text-overflow;
 		}
 		.cms-file-info{
